--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,13 @@
 {
-        "name" : "DarrenInwood/silverstripe-backup",
-        "description" : "Backs up assets and database, and copies them somewhere safe.",
+        "name" : "spark-green/silverstripe-backup",
+        "description" : "Backs up assets and database into your assets directory",
         "type" : "silverstripe-module",
         "authors" : [
                 {
-                        "name" : "Darren Inwood",
-                        "email" : "darren@stripetheweb.com",
-                        "role" : "Developer"
-                },
-                {
-                        "name" : "Dylan Sweetensen",
-                        "email" : "dylan@stripetheweb.com",
-                        "role" : "Developer"
+                        "name" : "Julian Smith",
+                        "email" : "julian@wubies.org",
+						"homepage" : "https://www.sparkgreen.com.au",
+                        "role" : "Senior Developer"
                 }
         ],
         "require" : {
